[gd_scene load_steps=8 format=3 uid="uid://ct4xl5bcuhari"]

[ext_resource type="Script" path="res://scripts/pausemenu.gd" id="1_kwyd1"]
[ext_resource type="Theme" uid="uid://cv5ix05irjhgf" path="res://themes/pausemenu theme.tres" id="2_13yte"]
[ext_resource type="PackedScene" path="res://scenes/volume.tscn" id="3_w2hvs"]
[ext_resource type="Texture2D" uid="uid://glgfhmcpiav" path="res://sprites/ui/button .png" id="4_6p78e"]
[ext_resource type="AudioStream" uid="uid://b75i4k2cjlo7i" path="res://assets/SFX/220191__gameaudio__space-swoosh-brighter.wav" id="4_36oi5"]
[ext_resource type="AudioStream" uid="uid://baqe8q6muw8tf" path="res://assets/SFX/171697__nenadsimic__menu-selection-click.wav" id="5_jf0jo"]
[ext_resource type="Texture2D" uid="uid://dyt3obrvudn5x" path="res://sprites/ui/button spacebar.png" id="5_kj4hx"]

[node name="pausemenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwyd1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 0.470588)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -191.0
offset_right = -106.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_13yte")
theme_override_constants/separation = 10

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_13yte")
text = "Resume"
flat = true

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_13yte")
text = "Restart"
flat = true

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_13yte")
text = "Quit"
flat = true

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 217.0
offset_top = 398.0
offset_right = 489.0
offset_bottom = 413.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 217.0
offset_top = 461.0
offset_right = 489.0
offset_bottom = 476.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 218.0
offset_top = 525.0
offset_right = 490.0
offset_bottom = 540.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -932.0
offset_top = 33.0
offset_right = -666.0
offset_bottom = 212.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_13yte")
theme_override_constants/separation = 10
alignment = 1

[node name="mvolume label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_13yte")
text = "Master Volume"

[node name="volume" parent="MarginContainer2/VBoxContainer" instance=ExtResource("3_w2hvs")]
layout_mode = 2
bus_name = "Master"

[node name="music label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_13yte")
text = "Music"

[node name="volume2" parent="MarginContainer2/VBoxContainer" instance=ExtResource("3_w2hvs")]
layout_mode = 2
bus_name = "Music"

[node name="music label2" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_13yte")
text = "SFX"

[node name="volume3" parent="MarginContainer2/VBoxContainer" instance=ExtResource("3_w2hvs")]
layout_mode = 2
bus_name = "SFX"

[node name="SPACE" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 782.0
offset_top = 289.0
offset_right = 877.0
offset_bottom = 359.0

[node name="ButtonSpacebar" type="Sprite2D" parent="SPACE"]
position = Vector2(44, 167.5)
texture = ExtResource("5_kj4hx")

[node name="ButtonSPACE" type="Label" parent="SPACE/ButtonSpacebar"]
offset_left = -33.0
offset_top = -27.5
offset_right = 204.0
offset_bottom = 41.5
theme = ExtResource("2_13yte")
text = "space"

[node name="SD" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 782.0
offset_top = 289.0
offset_right = 877.0
offset_bottom = 359.0

[node name="ButtonS" type="Sprite2D" parent="SD"]
position = Vector2(8.72009, 23.8)
scale = Vector2(0.960002, 0.960002)
texture = ExtResource("4_6p78e")

[node name="S2" type="Label" parent="SD/ButtonS"]
offset_left = -8.04175
offset_top = -19.5833
offset_right = 228.958
offset_bottom = 49.4167
theme = ExtResource("2_13yte")
text = "S"

[node name="ButtonD" type="Sprite2D" parent="SD"]
position = Vector2(81.7201, 23.8)
scale = Vector2(0.960002, 0.960002)
texture = ExtResource("4_6p78e")

[node name="D2" type="Label" parent="SD/ButtonD"]
offset_left = -8.04175
offset_top = -20.6249
offset_right = 228.958
offset_bottom = 48.3751
theme = ExtResource("2_13yte")
text = "D"

[node name="WASD" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 206.0
offset_top = -35.0
offset_right = 301.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonW" type="Sprite2D" parent="WASD"]
position = Vector2(-53.2799, -118.8)
scale = Vector2(0.960002, 0.960002)
texture = ExtResource("4_6p78e")

[node name="W" type="Label" parent="WASD/ButtonW"]
offset_left = -17.4167
offset_top = -25.0
offset_right = 219.583
offset_bottom = 44.0
theme = ExtResource("2_13yte")
text = " W"

[node name="ButtonA" type="Sprite2D" parent="WASD"]
position = Vector2(14.7201, -118.8)
scale = Vector2(0.960002, 0.960002)
texture = ExtResource("4_6p78e")

[node name="A" type="Label" parent="WASD/ButtonA"]
offset_left = -13.2501
offset_top = -25.0
offset_right = 223.75
offset_bottom = 44.0
theme = ExtResource("2_13yte")
text = "A"

[node name="ButtonS" type="Sprite2D" parent="WASD"]
position = Vector2(83.7201, -118.8)
scale = Vector2(0.960002, 0.960002)
texture = ExtResource("4_6p78e")

[node name="S" type="Label" parent="WASD/ButtonS"]
offset_left = -8.04169
offset_top = -25.0
offset_right = 228.958
offset_bottom = 44.0
theme = ExtResource("2_13yte")
text = "S"

[node name="ButtonD" type="Sprite2D" parent="WASD"]
position = Vector2(156.72, -118.8)
scale = Vector2(0.960002, 0.960002)
texture = ExtResource("4_6p78e")

[node name="D" type="Label" parent="WASD/ButtonD"]
offset_left = -7.00009
offset_top = -23.125
offset_right = 87.9999
offset_bottom = 9.875
theme = ExtResource("2_13yte")
text = "D"

[node name="to move" type="Label" parent="."]
layout_mode = 2
offset_left = 782.0
offset_top = 222.2
offset_right = 877.0
offset_bottom = 255.2
theme = ExtResource("2_13yte")
text = "to move
"

[node name="to climb" type="Label" parent="."]
layout_mode = 2
offset_left = 708.0
offset_top = 363.0
offset_right = 967.0
offset_bottom = 396.0
theme = ExtResource("2_13yte")
text = "to climb up and down
"

[node name="to jump" type="Label" parent="."]
layout_mode = 2
offset_left = 782.0
offset_top = 497.0
offset_right = 877.0
offset_bottom = 530.0
theme = ExtResource("2_13yte")
text = "to jump
"

[node name="hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_36oi5")
max_distance = 100000.0
bus = &"SFX"

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jf0jo")
max_distance = 1e+06
bus = &"SFX"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="drag_ended" from="MarginContainer2/VBoxContainer/volume" to="." method="_on_volume_drag_ended"]
[connection signal="drag_ended" from="MarginContainer2/VBoxContainer/volume2" to="." method="_on_volume_2_drag_ended"]
[connection signal="drag_ended" from="MarginContainer2/VBoxContainer/volume3" to="." method="_on_volume_3_drag_ended"]
